# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.259 2015/01/19 19:56:14 graaff Exp $

  19 Jan 2015; Hans de Graaff <graaff@gentoo.org> rubygems-2.2.2.ebuild,
  rubygems-2.4.4.ebuild, rubygems-2.4.5.ebuild:
  Change virtual/ruby-rdoc to dev-ruby/rdoc since the virtual is a no-op these
  days and does exactly that.

  08 Jan 2015; Manuel Rüger <mrueg@gentoo.org> -rubygems-2.0.14.ebuild:
  Remove old.

  08 Jan 2015; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for ppc64, wrt bug #532534

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for ia64, wrt bug #532534

*rubygems-2.4.5 (27 Dec 2014)

  27 Dec 2014; Hans de Graaff <graaff@gentoo.org> +rubygems-2.4.5.ebuild:
  Version bump. Add ruby22.

  26 Dec 2014; Markus Meier <maekke@gentoo.org> rubygems-2.2.2.ebuild:
  arm stable, bug #532534

  23 Dec 2014; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for alpha, wrt bug #532534

  22 Dec 2014; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for sparc, wrt bug #532534

  22 Dec 2014; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for ppc, wrt bug #532534

  19 Dec 2014; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for x86, wrt bug #532534

  19 Dec 2014; Agostino Sarubbo <ago@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for amd64, wrt bug #532534

  14 Dec 2014; Jeroen Roovers <jer@gentoo.org> rubygems-2.2.2.ebuild:
  Stable for HPPA (bug #532534).

  14 Dec 2014; Hans de Graaff <graaff@gentoo.org> -rubygems-2.0.14-r1.ebuild,
  -rubygems-2.4.2.ebuild:
  Cleanup.

  14 Dec 2014; Hans de Graaff <graaff@gentoo.org> rubygems-2.2.2.ebuild:
  Drop ruby21 to create a stable candidate.

  26 Nov 2014; Manuel Rüger <mrueg@gentoo.org> rubygems-2.0.14-r1.ebuild,
  rubygems-2.0.14.ebuild:
  Drop jruby target.
