@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby19] dev-ruby/rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby20] dev-ruby/rdoc[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby21] dev-ruby/rdoc[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby22] dev-ruby/rdoc[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 )
+DESCRIPTION=Centralized Ruby extension management system
+EAPI=5
+HOMEPAGE=http://rubyforge.org/projects/rubygems/
+IUSE=server test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=|| ( Ruby MIT )
+PDEPEND=server? ( >=dev-ruby/builder-2.1 )
+RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 )
+SLOT=0
+SRC_URI=http://production.cf.rubygems.org/rubygems/rubygems-2.4.6.tgz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=120fc055ded559c80c9f1624c30544ea
