@@ -1,12 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=x11-libs/gtk+:2 virtual/pkgconfig
-DESCRIPTION=A GTK+-2 based imond client for fli4l
-EAPI=1
-HOMEPAGE=http://userpage.fu-berlin.de/~zeank/gtk-imonc/
-KEYWORDS=amd64 ppc x86
-LICENSE=GPL-2
-RDEPEND=x11-libs/gtk+:2
-SLOT=0
-SRC_URI=http://userpage.fu-berlin.de/~zeank/gtk-imonc/download/gtk-imonc-0.6.4.1.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=b77d2ee3cb79cc819ae0ef2788e68d80
