@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-<herd>net-dialup</herd>
-<longdescription>GTK+-2 based imond client for fli4l</longdescription>
-</pkgmetadata>
