@@ -1,65 +1,0 @@
-# ChangeLog for net-dialup/gtk-imonc
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/gtk-imonc/ChangeLog,v 1.11 2012/05/03 03:54:07 jdhore Exp $
-
-  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gtk-imonc-0.6.4.1.ebuild:
-  dev-util/pkgconfig -> virtual/pkgconfig
-
-  29 Mar 2011; Christoph Mende <angelos@gentoo.org> gtk-imonc-0.6.4.1.ebuild:
-  Fixed slot deps
-
-  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
-  Transition to Manifest2.
-
-  12 Mar 2006; Alin Nastac <mrness@gentoo.org> gtk-imonc-0.6.4.1.ebuild:
-  Remove virtual/libc dependency. Quote $D.
-
-  12 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
-  -gtk-imonc-0.6.3.ebuild, gtk-imonc-0.6.4.1.ebuild:
-  Stable on x86, ppc and amd64. Removed old version.
-
-  14 Apr 2005; Alin Nastac <mrness@gentoo.org> -gtk-imonc-0.6.2.ebuild:
-  Remove obsolete version
-
-  20 Mar 2005; Stefan Schweizer <genstef@gentoo.org>
-  gtk-imonc-0.6.4.1.ebuild:
-  Remove x11 depend, add pkgconfig depend, add domenu for the .desktop file
-
-  20 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
-  gtk-imonc-0.6.2.ebuild, gtk-imonc-0.6.3.ebuild, gtk-imonc-0.6.4.1.ebuild:
-  Removed src_compile().
-
-*gtk-imonc-0.6.4.1 (20 Mar 2005)
-
-  20 Mar 2005; Alin Nastac <mrness@gentoo.org> +metadata.xml,
-  +gtk-imonc-0.6.2.ebuild, +gtk-imonc-0.6.3.ebuild, +gtk-imonc-0.6.4.1.ebuild:
-  Moved from net-misc/gtk-imonc to net-dialup/gtk-imonc.
-
-*gtk-imonc-0.6.4.1 (20 Mar 2005)
-
-  20 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
-  +gtk-imonc-0.6.4.1.ebuild:
-  Version bump. Thanks to Bjoern Koch for noticing me.
-
-  17 Feb 2005; Michael Hanselmann <hansmi@gentoo.org> gtk-imonc-0.6.3.ebuild:
-  Stable.
-
-  31 Oct 2004; Simon Stelling <blubb@gentoo.org> gtk-imonc-0.6.3.ebuild:
-  added ~amd64
-
-*gtk-imonc-0.6.3 (24 Oct 2004)
-
-  24 Oct 2004; Michael Hanselmann <hansmi@gentoo.org> +gtk-imonc-0.6.3.ebuild:
-  New version 0.6.3.
-
-  12 Jul 2004; Michael Hanselmann <hansmi@gentoo.org> gtk-imonc-0.6.2.ebuild:
-  Removed RDEPEND=$DEPEND.
-
-  01 Jul 2004; Jon Hood <squinky86@gentoo.org> gtk-imonc-0.6.2.ebuild:
-  change virtual/glibc to virtual/libc
-
-*gtk-imonc-0.6.2 (29 May 2004)
-
-  29 May 2004; Michael Hanselmann <hansmi@gentoo.org>; gtk-imonc-0.6.2.ebuild,
-  ChangeLog, metadata.xml:
-  Initial import.
