@@ -1,10 +1,13 @@
 .# ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9825 2015/02/25 16:07:01 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9826 2015/02/27 07:18:14 pinkbyte Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  27 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> package.mask:
+  Drop obsolete mask on net-dialup/gtk-imonc
 
   25 Feb 2015; Andrey Grozin <grozin@gentoo.org> base/package.use.mask,
   arch/amd64/package.use.mask, arch/x86/package.use.mask:
