@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rubygems
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.259 2015/01/19 19:56:14 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.260 2015/02/27 07:22:48 graaff Exp $
+
+*rubygems-2.4.6 (27 Feb 2015)
+
+  27 Feb 2015; Hans de Graaff <graaff@gentoo.org> +rubygems-2.4.6.ebuild:
+  Version bump.
 
   19 Jan 2015; Hans de Graaff <graaff@gentoo.org> rubygems-2.2.2.ebuild,
   rubygems-2.4.4.ebuild, rubygems-2.4.5.ebuild:
